<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <FrameLayout
        android:id="@+id/fl_session"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_groups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="100" >

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="#2E2E2E"
            android:orientation="horizontal"
            android:weightSum="100" >

            <ImageView
                android:id="@+id/iv_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:contentDescription="@string/gif_spinner"
                android:padding="5dp"
                android:src="@anim/tiny_spinner_anim" />

            <TextView
                android:id="@+id/tv_groups"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/groups"
                android:textColor="#E6E6E6"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rl_outer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" >

                <ImageView
                    android:id="@+id/iv_rotator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/rotator"
                    android:padding="5dp"
                    android:src="@anim/rotator_anim" />

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/add"
                    android:padding="10dp"
                    android:src="@layout/add_button" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_list_groups"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="83"
            android:background="@drawable/cloth_repeating"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lv_groups"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/greybackground"
                android:dividerHeight="1dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/bt_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_red"
                android:padding="5dp"
                android:text="@string/logout" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>