<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_session_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/ll_session_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#2E2E2E"
        android:orientation="horizontal"
        android:weightSum="100" >

        <ImageView
            android:id="@+id/iv_arrow_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:contentDescription="@string/gif_spinner"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_up" />

        <RelativeLayout
            android:id="@+id/rl_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20" >

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/rotator"
                android:padding="5dp"
                android:src="@drawable/mic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_session"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/groups"
            android:textColor="#E6E6E6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_session_rotator_outer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35" >

            <RelativeLayout
                android:id="@+id/rl_session_rotator_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" >

                <ImageView
                    android:id="@+id/iv_session_rotator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/rotator"
                    android:padding="2dp"
                    android:src="@anim/rotator_anim" />

                <ImageView
                    android:id="@+id/iv_session_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/add"
                    android:padding="16dp"
                    android:src="@drawable/ic_menu_invite"
                    android:translationX="2dp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_weight="93" >

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/pager_tab_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#33b5e5"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#fff" />
    </android.support.v4.view.ViewPager>

</LinearLayout>