<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_members_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloth_repeating"
    android:weightSum="80" >

    <ListView
        android:id="@+id/lv_members"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:divider="@color/greybackground"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@+id/ll_geoSeeker"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <RelativeLayout
            android:id="@+id/ll_geo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20" >

            <ImageView
                android:id="@+id/iv_circle_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:contentDescription="@string/gif_spinner"
                android:src="@drawable/outer_circle_glowing" />

            <ImageView
                android:id="@+id/iv_circle_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:contentDescription="@string/gif_spinner"
                android:src="@drawable/inner_circle" />

            <ImageView
                android:id="@+id/iv_geo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:contentDescription="@string/gif_spinner"
                android:src="@anim/globe_anim" />

            <ImageView
                android:id="@+id/iv_circle_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/gif_spinner"
                android:src="@drawable/gray_circle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_sb_geo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="62"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_views"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="180" >

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nums"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="180" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/_0"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/_1"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/_2"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/_3"
                    android:textColor="@color/white" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_geo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:max="180"
                android:progress="30" />

            <SeekBar
                android:id="@+id/sb_limit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:max="160"
                android:maxHeight="1000dp"
                android:progress="10"
                android:progressDrawable="@null"
                android:thumb="@drawable/red_thumb"
                android:translationX="15dp" />
        </RelativeLayout>

        <ToggleButton
            android:id="@+id/tb_geo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="18"
            android:checked="true"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textOff="GPS Off"
            android:textOn="GPS On" />
    </LinearLayout>

</RelativeLayout>